fixed footer and  searchform

--- a/index.html
+++ b/index.html
@@ -24,24 +24,28 @@
         <img href="#" id="logo" src="images/googlelogo.png" alt="Google logo">
         <input id="search-form" type="text" >
         <div id=search>
-            <button id="random-search-btn">
-                I'm Feeling lucky
-            </button>
-            <button id="google-search-btn">
+            <button class="boton">
                 Google Search
+            </button>
+            <button class="boton">
+                I'm Feeling lucky
             </button>
         </div>
         
-        <p id="google-text">Ofrecido por Google en:  <a href="#">English Español (Latinoamérica) Quechua</a></p>
+        <p id="google-text">Ofrecido por Google en:  <a id="latino" href="#">English Español (Latinoamérica) Quechua</a></p>
     </div>
     <footer>
         <div id="footer-google">
-            <a href="#" id="adbertising">Abertising</a>
-            <a href="#" id="business">Business</a>
-            <a href="#" id="how-to">How search works</a>
-            <a href="#" id="privacy">Privacy</a>
-            <a href="#" id="termns">Termns</a>
-            <a href="#" id="settings">Settings</a>
+            <div id="left-footer">
+                <a href="#" id="adbertising">Abertising</a>
+                <a href="#" id="business">Business</a>
+                <a href="#" id="how-to">How search works</a>
+            </div>
+            <div id="right-footer">
+                <a href="#" id="privacy">Privacy</a>
+                <a href="#" id="termns">Termns</a>
+                <a href="#" id="settings">Settings</a>
+            </div>      
         </div>
     </footer>
 </body>
